# RetroFuturaGUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Resources/Bindings/: RetroFuturaGuiBinding.cs  RetroFuturaGuiBinding.py
source/: config.hpp.in
source/Borders/: LineBorder.cpp  LineBorder.hpp
source/Fonts/: FontManager.cpp  FontManager.hpp  UnicodeBlocks.hpp
source/Frames/: LineFrame.cpp  LineFrame.hpp
source/OpenGlHelpers/: IncludeHelper.hpp  InputManager.hpp  Projection.cpp  Projection.hpp  RetroFuturaGuiInit.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
source/Shaders/: Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp
source/Shaders/ShaderSource/: BorderFill.vs  BorderHueStarGradient.fs  BorderLinearGradient.fs  BorderRadialGradient.fs  BorderSolidFill.fs  Fill.fs  Fill.vs  FillGradient.fs  FillGradient.vs  HueStarGradient.fs  Line.gs  Line.vs  RadialGradient.fs  SolidFill.fs  Text.vs  Texture.vs
source/Shapes/: Rectangle.cpp  Rectangle.hpp
source/Widgets/: Grid2D.hpp  IWidget.cpp  Image2D.hpp  Label.cpp  Label.hpp  Window.cpp  WindowBar.cpp
source/Widgets/Mechanisms/: DynamicLibWidgetManager.hpp  Signal.hpp
source/_widgets/: WindowBar.cpp
source/_widgets/Mechanisms/: DynamicLibWidgetManager.cpp
source/widgets/: Button.cpp  Button.hpp  Grid2D.cpp  Grid2D.hpp  IWidget.cpp  IWidget.hpp  IWidgetBase.cpp  IWidgetBase.hpp  Image2D.cpp  Image2D.hpp  Label.cpp  Label.hpp  MainWindow.cpp  MainWindow.hpp  Window.cpp  Window.hpp  WindowBar.cpp  WindowBar.hpp
source/widgets/Mechanisms/: DynamicLibWidgetManager.cpp  DynamicLibWidgetManager.hpp  Signal.hpp  WidgetIdManager.hpp
